adding a new string for white theme

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -241,6 +241,7 @@
     <string name="dark_theme">داكن</string>
     <string name="solarized">شمسي</string>
     <string name="dark_red">أحمر داكن</string>
+    <string name="white">White</string>
     <string name="black_white">أبيض وأسود</string>
     <string name="custom">مخصص</string>
     <string name="shared">المشتركة</string>
