--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Qaranlıq</string>
     <string name="solarized">Közərmiş</string>
     <string name="dark_red">Qaraqırmızı</string>
+    <string name="white">White</string>
     <string name="black_white">Ağ və Qara</string>
     <string name="custom">Özəl</string>
     <string name="shared">Paylanmış</string>
