--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -247,6 +247,7 @@
     <string name="dark_theme">Tmavý</string>
     <string name="solarized">Solarizovaný</string>
     <string name="dark_red">Tmavě červený</string>
+    <string name="white">White</string>
     <string name="black_white">Černobílý</string>
     <string name="custom">Vlastní</string>
     <string name="shared">Sdílený</string>
