--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -255,6 +255,7 @@
     <string name="dark_theme">Tywyll</string>
     <string name="solarized">Solareiddiwyd</string>
     <string name="dark_red">Coch tywyll</string>
+    <string name="white">White</string>
     <string name="black_white">Du a Gwyn</string>
     <string name="custom">Addasedig</string>
     <string name="shared">Rhennir</string>
