--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Σκούρο</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Σκούρο κόκκινο</string>
+    <string name="white">White</string>
     <string name="black_white">Μαύρο &amp; Άσπρο</string>
     <string name="custom">Προσαρμογή</string>
     <string name="shared">Κοινόχρηστο</string>
