--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Oscuro</string>
     <string name="solarized">Solarizado</string>
     <string name="dark_red">Rojo oscuro</string>
+    <string name="white">White</string>
     <string name="black_white">Blanco y negro</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Compartido</string>
