--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Sombre</string>
     <string name="solarized">Solarisé</string>
     <string name="dark_red">Noir et Rouge</string>
+    <string name="white">White</string>
     <string name="black_white">Noir et Blanc</string>
     <string name="custom">Personnalisé</string>
     <string name="shared">Partagé</string>
