--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -246,6 +246,7 @@
     <string name="dark_theme">Tamna</string>
     <string name="solarized">Solarizirana</string>
     <string name="dark_red">Tamno crvena</string>
+    <string name="white">White</string>
     <string name="black_white">Crno &amp; Bijelo</string>
     <string name="custom">Prilagođena</string>
     <string name="shared">Dijeljena</string>
