--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -242,6 +242,7 @@
     <string name="dark_theme">Sötét</string>
     <string name="solarized">Kiégetett</string>
     <string name="dark_red">Sötét és piros</string>
+    <string name="white">White</string>
     <string name="black_white">Fekete és fehér</string>
     <string name="custom">Egyéni</string>
     <string name="shared">Megosztva</string>
