--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Scuro</string>
     <string name="solarized">Solarizzato</string>
     <string name="dark_red">Rosso scuro</string>
+    <string name="white">White</string>
     <string name="black_white">Bianco e nero</string>
     <string name="custom">Personalizzato</string>
     <string name="shared">Condiviso</string>
