--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">כהה</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">אדום כהה</string>
+    <string name="white">White</string>
     <string name="black_white">שחור ולבן</string>
     <string name="custom">מותאם אישית</string>
     <string name="shared">משותף</string>
