--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -239,6 +239,7 @@
     <string name="dark_theme">ダーク</string>
     <string name="solarized">ソラライズド</string>
     <string name="dark_red">ダーク・レッド</string>
+    <string name="white">White</string>
     <string name="black_white">モノクロ</string>
     <string name="custom">カスタム</string>
     <string name="shared">共有</string>
