--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Tamsi</string>
     <string name="solarized">Soliarizuota</string>
     <string name="dark_red">Tamsiai raudona</string>
+    <string name="white">White</string>
     <string name="black_white">Juoda ir balta</string>
     <string name="custom">Pasirinktinė</string>
     <string name="shared">Bendra</string>
