--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Mørkt</string>
     <string name="solarized">Solarisert</string>
     <string name="dark_red">Mørkerødt</string>
+    <string name="white">White</string>
     <string name="black_white">Svart &amp; hvitt</string>
     <string name="custom">Tilpasset</string>
     <string name="shared">Delt</string>
