--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Donker</string>
     <string name="solarized">Overbelicht</string>
     <string name="dark_red">Donkerrood</string>
+    <string name="white">White</string>
     <string name="black_white">Zwart-wit</string>
     <string name="custom">Aangepast</string>
     <string name="shared">Gedeeld</string>
