--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Escuro</string>
     <string name="solarized">Ensolarado</string>
     <string name="dark_red">Vermelho Escuro</string>
+    <string name="white">White</string>
     <string name="black_white">Preto &amp; branco</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Compartilhado</string>
