--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -248,6 +248,7 @@
     <string name="dark_theme">Temno</string>
     <string name="solarized">Osončeno</string>
     <string name="dark_red">Temno rdeče</string>
+    <string name="white">White</string>
     <string name="black_white">Črno &amp; belo</string>
     <string name="custom">Po meri</string>
     <string name="shared">Deljeno</string>
