--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -242,6 +242,7 @@
     <string name="dark_theme">Тамна</string>
     <string name="solarized">Осветљена</string>
     <string name="dark_red">Тамно црвена</string>
+    <string name="white">White</string>
     <string name="black_white">Црно &amp; Бела</string>
     <string name="custom">Прилагођена</string>
     <string name="shared">Дељена</string>
