--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Темна</string>
     <string name="solarized">Солярис</string>
     <string name="dark_red">Темно-червоний</string>
+    <string name="white">White</string>
     <string name="black_white">Чорний &amp; Білий</string>
     <string name="custom">Користувацька</string>
     <string name="shared">Загальна</string>
