--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Tối</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Đỏ sẫm</string>
+    <string name="white">White</string>
     <string name="black_white">Đen &amp; trắng</string>
     <string name="custom">Tùy chỉnh</string>
     <string name="shared">Đã chia sẻ</string>
