--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -240,6 +240,7 @@
     <string name="dark_theme">深色主题</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">深红</string>
+    <string name="white">White</string>
     <string name="black_white">黑白</string>
     <string name="custom">自定义</string>
     <string name="shared">共享</string>
