--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Escuro</string>
     <string name="solarized">Solarizado</string>
     <string name="dark_red">Vermello escuro</string>
+    <string name="white">White</string>
     <string name="black_white">Branco e negro</string>
     <string name="custom">Personalizado</string>
     <string name="shared">Compartido</string>
