--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -247,6 +247,7 @@
     <string name="dark_theme">Тёмная</string>
     <string name="solarized">Солнечная</string>
     <string name="dark_red">Тёмно-красная</string>
+    <string name="white">White</string>
     <string name="black_white">Чёрно-белая</string>
     <string name="custom">Своё</string>
     <string name="shared">Общая</string>
