--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -243,6 +243,7 @@
     <string name="dark_theme">Karanlık</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Koyu Kırmızı</string>
+    <string name="white">White</string>
     <string name="black_white">Siyah &amp; Beyaz</string>
     <string name="custom">Özel</string>
     <string name="shared">Paylaşılan</string>
