--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -240,6 +240,7 @@
     <string name="dark_theme">灰暗主題</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">深紅主題</string>
+    <string name="white">White</string>
     <string name="black_white">黑白主題</string>
     <string name="custom">自訂</string>
     <string name="shared">分享</string>
