--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -243,7 +243,7 @@
     <string name="dark_theme">Fosc</string>
     <string name="solarized">Solaritzat</string>
     <string name="dark_red">Vermell fosc</string>
-    <string name="white">White</string>
+    <string name="white">Blanc</string>
     <string name="black_white">Blanc &amp; Negre</string>
     <string name="custom">Personalizat</string>
     <string name="shared">Compartit</string>
