--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -243,7 +243,7 @@
     <string name="dark_theme">Mørk</string>
     <string name="solarized">Solarized</string>
     <string name="dark_red">Mørkerød</string>
-    <string name="white">White</string>
+    <string name="white">Hvid</string>
     <string name="black_white">Sort &amp; hvid</string>
     <string name="custom">Tilpasset</string>
     <string name="shared">Gemt</string>
