--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -273,7 +273,7 @@
     <string name="print">Udskriv</string>
     <string name="create_shortcut">Opret genvej</string>
     <string name="add_number_to_contact">Føj nummer til kontakt</string>
-    <string name="view_contact_details">View contact details</string>
+    <string name="view_contact_details">Vis kontaktoplysninger</string>
     <string name="call_from_sim_1">Call from SIM 1</string>
     <string name="call_from_sim_2">Call from SIM 2</string>
     <string name="toggle_filename">Skift filnavnets synlighed</string>
