adding some things related to setting reminders during the day

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -483,6 +483,8 @@
     <string name="your_sounds">الأصوات الخاصة بك</string>
     <string name="add_new_sound">إضافة صوت جديد</string>
     <string name="no_sound">لا يوجد صوت</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">الإعدادات</string>
