--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -485,6 +485,8 @@
     <string name="your_sounds">Sizin səsləriniz</string>
     <string name="add_new_sound">Yeni səs əlavə et</string>
     <string name="no_sound">Səs yoxdur</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Parametrlər</string>
