--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -453,6 +453,8 @@
     <string name="your_sounds">Suara khusus</string>
     <string name="add_new_sound">Tambah suara baru</string>
     <string name="no_sound">Tidak ada suara</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Pengaturan</string>
