--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -451,6 +451,8 @@
     <string name="your_sounds">사용자 소리</string>
     <string name="add_new_sound">소리 추가</string>
     <string name="no_sound">소리 없음</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">설정</string>
