--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -518,6 +518,8 @@
     <string name="your_sounds">Свои звуки</string>
     <string name="add_new_sound">Добавить новый звук</string>
     <string name="no_sound">Без звука</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Настройки</string>
