--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -518,6 +518,8 @@
     <string name="your_sounds">Vaše zvuky</string>
     <string name="add_new_sound">Pridať nový zvuk</string>
     <string name="no_sound">Žiadny zvuk</string>
+    <string name="during_day_at_hh_mm">Počas dňa o hh:mm</string>
+    <string name="during_day_at">Počas dňa o %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
