--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -453,6 +453,8 @@
     <string name="your_sounds">你的音效</string>
     <string name="add_new_sound">添加新的音效</string>
     <string name="no_sound">無音效</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
