--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -609,6 +609,8 @@
     <string name="your_sounds">Dy synau di</string>
     <string name="add_new_sound">Ychwanegu sŵn newydd</string>
     <string name="no_sound">Dim sŵn</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Gosodiadau</string>
