--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -485,6 +485,8 @@
     <string name="your_sounds">Os teus sons</string>
     <string name="add_new_sound">Engadir un novo son</string>
     <string name="no_sound">Silencio</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Axustes</string>
