--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -485,6 +485,8 @@
     <string name="your_sounds">הצלילים שלך</string>
     <string name="add_new_sound">הוספת צליל</string>
     <string name="no_sound">No sound</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">הגדרות</string>
