--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -509,6 +509,8 @@
     <string name="your_sounds">Jūsų garsai</string>
     <string name="add_new_sound">Pridėti naują garsą</string>
     <string name="no_sound">Nėra garso</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Nustatymai</string>
