--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -485,6 +485,8 @@
     <string name="your_sounds">Dine lyder</string>
     <string name="add_new_sound">Legg til en ny lyd</string>
     <string name="no_sound">Ingen lyd</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Innstillinger</string>
