--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -548,6 +548,8 @@
     <string name="your_sounds">Vaši zvoki</string>
     <string name="add_new_sound">Dodaj nov zvok</string>
     <string name="no_sound">Brez zvoka</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Nastavitve</string>
