--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -485,6 +485,8 @@
     <string name="your_sounds">Ваші звуки</string>
     <string name="add_new_sound">Додати новий звук</string>
     <string name="no_sound">Без звуку</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Налаштування</string>
