--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -485,6 +485,8 @@
     <string name="your_sounds">Âm báo của bạn</string>
     <string name="add_new_sound">Thêm một âm báo mới</string>
     <string name="no_sound">Không có âm báo</string>
+    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
+    <string name="during_day_at">During the day at %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Cài đặt</string>
