Assume that hh:mm in "during_day_at_hh_mm" is not replaced

--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -485,7 +485,7 @@
     <string name="your_sounds">Eigen geluiden</string>
     <string name="add_new_sound">Nieuw geluid toevoegen</string>
     <string name="no_sound">Geen geluid</string>
-    <string name="during_day_at_hh_mm">Overdag om hh.mmu</string>
+    <string name="during_day_at_hh_mm">Overdag om uu:mm</string>
     <string name="during_day_at">Overdag om %02d.%02du</string>
 
     <!-- Settings -->
