--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -485,8 +485,8 @@
     <string name="your_sounds">Els teus sons</string>
     <string name="add_new_sound">Afegeix un so nou</string>
     <string name="no_sound">Sense so</string>
-    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
-    <string name="during_day_at">During the day at %02d:%02d</string>
+    <string name="during_day_at_hh_mm">Durant el dia a les hh:mm</string>
+    <string name="during_day_at">Durant el dia a les %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Ajustaments</string>
