--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -485,8 +485,8 @@
     <string name="your_sounds">Οι ήχοι σας</string>
     <string name="add_new_sound">Προσθέστε νέο ήχο</string>
     <string name="no_sound">Χωρίς ήχο</string>
-    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
-    <string name="during_day_at">During the day at %02d:%02d</string>
+    <string name="during_day_at_hh_mm">Κατά τη διάρκεια της ημέρας στις hh:mm</string>
+    <string name="during_day_at">Κατά τη διάρκεια της ημέρας στις %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Ρυθμίσεις</string>
