adding a new color customization related string for accent color of white theme

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -212,6 +212,7 @@
     <string name="background_color">لون الخلفية</string>
     <string name="text_color">لون النص</string>
     <string name="primary_color">اللون الأساسي</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">لون المقدمة</string>
     <string name="app_icon_color">لون أيقونة التطبيق</string>
     <string name="bottom_navigation_bar_color">لون شريط التنقل السفلي</string>
