--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -225,6 +225,7 @@
     <string name="background_color">Lliw cefndir</string>
     <string name="text_color">Lliw testun</string>
     <string name="primary_color">Prif liw</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Lliw blaendir</string>
     <string name="app_icon_color">Lliw eicon yr ap</string>
     <string name="bottom_navigation_bar_color">Lliw bar llywio gwaelod</string>
