--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -213,6 +213,7 @@
     <string name="background_color">Taustaväri</string>
     <string name="text_color">Tekstin väri</string>
     <string name="primary_color">Ensisijainen väri</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Etualan väri</string>
     <string name="app_icon_color">Sovelluksen ikonin väri</string>
     <string name="bottom_navigation_bar_color">Alapalkin väri</string>
