--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -213,6 +213,7 @@
     <string name="background_color">Couleur de l\'arrière-plan</string>
     <string name="text_color">Couleur du texte</string>
     <string name="primary_color">Couleur primaire</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Couleur d\'arrière-plan</string>
     <string name="app_icon_color">Couleur de l\'icône de l\'application</string>
     <string name="bottom_navigation_bar_color">Couleur de la barre de navigation</string>
