--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -213,6 +213,7 @@
     <string name="background_color">Bakgrunnsfarge</string>
     <string name="text_color">Tekstfarge</string>
     <string name="primary_color">Primærfarge</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
