--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -217,6 +217,7 @@
     <string name="background_color">Farba pozadia</string>
     <string name="text_color">Farba textu</string>
     <string name="primary_color">Primárna farba</string>
+    <string name="accent_color_white">Akcentová farba bielej témy</string>
     <string name="foreground_color">Farba popredia</string>
     <string name="app_icon_color">Farba spúšťacej ikonky apky</string>
     <string name="bottom_navigation_bar_color">Farba spodnej navigačnej lišty</string>
