--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -213,6 +213,7 @@
     <string name="background_color">Màu nền</string>
     <string name="text_color">Màu văn bản</string>
     <string name="primary_color">Màu chính</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Màu nền</string>
     <string name="app_icon_color">Màu biểu tượng ứng dụng</string>
     <string name="bottom_navigation_bar_color">Màu thanh điều hướng phía dưới</string>
