--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -213,6 +213,7 @@
     <string name="background_color">Arxaplan rəngi</string>
     <string name="text_color">Yazı rəngi</string>
     <string name="primary_color">Birinci rəng</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Önplan rəngi</string>
     <string name="app_icon_color">Tətbiq ikonu rəngi</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
