--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -210,6 +210,7 @@
     <string name="background_color">Warna latar belakang</string>
     <string name="text_color">Warna teks</string>
     <string name="primary_color">Warna utama</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">Warna latar depan</string>
     <string name="app_icon_color">Warna ikon aplikasi</string>
     <string name="bottom_navigation_bar_color">Warna bilah navigasi bawah</string>
