--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -209,6 +209,7 @@
     <string name="background_color">배경 색상</string>
     <string name="text_color">텍스트 색상</string>
     <string name="primary_color">주요 색상(테마)</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">그리기 색상</string>
     <string name="app_icon_color">앱 아이콘 색상</string>
     <string name="bottom_navigation_bar_color">네비게이션 바 색상</string>
