--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -210,6 +210,7 @@
     <string name="background_color">背景顏色</string>
     <string name="text_color">文字顏色</string>
     <string name="primary_color">主體顏色</string>
+    <string name="accent_color_white">Accent color of white theme</string>
     <string name="foreground_color">前景顏色</string>
     <string name="app_icon_color">應用程式圖標顏色</string>
     <string name="bottom_navigation_bar_color">底部導航列顏色</string>
