Updated Russian language

--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -217,7 +217,7 @@
     <string name="background_color">Цвет фона</string>
     <string name="text_color">Цвет текста</string>
     <string name="primary_color">Основной цвет</string>
-    <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_white">Цвет акцента белой темы</string>
     <string name="foreground_color">Цвет переднего плана</string>
     <string name="app_icon_color">Цвет значка приложения</string>
     <string name="bottom_navigation_bar_color">Цвет нижней панели навигации</string>
@@ -519,8 +519,8 @@
     <string name="your_sounds">Свои звуки</string>
     <string name="add_new_sound">Добавить новый звук</string>
     <string name="no_sound">Без звука</string>
-    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
-    <string name="during_day_at">During the day at %02d:%02d</string>
+    <string name="during_day_at_hh_mm">В течение дня в чч:мм</string>
+    <string name="during_day_at">В течение дня в %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Настройки</string>
@@ -809,9 +809,9 @@
     <string name="why_upgrade_footer">+ 100% гарантия возврата денег</string>
 
     <!-- Gallery Pro -->
-    <string name="why_upgrade_advanced_photo_editor">Продвинутый фоторедактор</string>
+    <string name="why_upgrade_advanced_photo_editor">Мощный фоторедактор</string>
     <string name="why_upgrade_heic_support">Поддержка файлов HEIC/HEIF</string>
-    <string name="why_upgrade_batch_renaming">Продвинутое переименование пакетных файлов</string>
+    <string name="why_upgrade_batch_renaming">Пакетное переименование файлов</string>
     <string name="why_upgrade_folder_locking">Индивидуальная блокировка папок</string>
     <string name="why_upgrade_printing_support">Поддержка печати</string>
 
