adding a new string for B&W theme accent color

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -214,6 +214,7 @@
     <string name="text_color">Schriftfarbe</string>
     <string name="primary_color">Primäre Farbe</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">Vordergrundfarbe</string>
     <string name="app_icon_color">App-Icon-Farbe</string>
     <string name="bottom_navigation_bar_color">Farbe der unteren Navigationsleiste</string>
