--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -218,6 +218,7 @@
     <string name="text_color">Цвет текста</string>
     <string name="primary_color">Основной цвет</string>
     <string name="accent_color_white">Цвет акцента белой темы</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">Цвет переднего плана</string>
     <string name="app_icon_color">Цвет значка приложения</string>
     <string name="bottom_navigation_bar_color">Цвет нижней панели навигации</string>
