--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -211,6 +211,7 @@
     <string name="text_color">文本颜色</string>
     <string name="primary_color">主体色</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">前景色</string>
     <string name="app_icon_color">应用图标颜色</string>
     <string name="bottom_navigation_bar_color">底部导航栏颜色</string>
