--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -214,6 +214,7 @@
     <string name="text_color">Cor do texto</string>
     <string name="primary_color">Cor principal</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">Cor de primeiro plano</string>
     <string name="app_icon_color">Cor da icona do aplicativo</string>
     <string name="bottom_navigation_bar_color">Cor da barra de navegación inferior</string>
