--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -217,6 +217,7 @@
     <string name="text_color">Boja teksta</string>
     <string name="primary_color">Primarna boja</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">Boja pozadine</string>
     <string name="app_icon_color">Boja ikone aplikacije</string>
     <string name="bottom_navigation_bar_color">Boja donje navigacijske trake</string>
