--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -214,6 +214,7 @@
     <string name="text_color">צבע טקסט</string>
     <string name="primary_color">צבע עיקרי</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">צבע חזית</string>
     <string name="app_icon_color">צבע אייקון תוכנה</string>
     <string name="bottom_navigation_bar_color">צבע סרגל ניווט</string>
