--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -214,6 +214,7 @@
     <string name="text_color">Teksto spalva</string>
     <string name="primary_color">Pirminė spalva</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">Priekinio plano spalva</string>
     <string name="app_icon_color">Programėlės ikonėlės spalva</string>
     <string name="bottom_navigation_bar_color">Apatinio skydelio spalva</string>
