--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -213,6 +213,7 @@
     <string name="text_color">Боја текста</string>
     <string name="primary_color">Главна боја</string>
     <string name="accent_color_white">Accent color of white theme</string>
+    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
     <string name="foreground_color">Позадинска боја</string>
     <string name="app_icon_color">Боја иконе апликације</string>
     <string name="bottom_navigation_bar_color">Боја доње навигационе линије</string>
